--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-image: url(Background/1.jpg);
+    background-image: url(img/1.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
